fabrique-derive/tests/ui/invalid_string_literal_in_referenced_key.stderr
error: Unknown value: `` at referenced_key
 --> tests/ui/invalid_string_literal_in_referenced_key.rs:4:1
  |
4 | struct Anvil {
  | ^^^^^^
