fabrique-derive/tests/ui/invalid_string_literal_in_referenced_key.rs
use fabrique_derive::Factory;

#[derive(Factory)]
struct Anvil {
    #[fabrique(relation = "Hammer", referenced_key = "")]
    hammer_id: u32,
    weight: u32,
}

fn main() {}